--- a/temp.html
+++ b/temp.html
@@ -2,16 +2,45 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Web Designer CRM/Project Management</title>
+	
 
-	<met name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0"
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="styles/common.css" type="text/css" rel="stylesheet" />
+	<link href="styles/responsive.css" type="text/css" rel="stylesheet" />
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<link href="main.css" type="text/css" rel="stylesheet" />
+	<!--[id lt IE 9]>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+	<script type="text/javascript" src="scripts/primary.js"></script>
+
 </head>
 <body>
-	<div id="header-area">
-
+	<div id="wrapper">
+		<header>
+			<h1>Web Designer CRM/Project Management</h1>
+			<nav>
+				<ul>
+					<li><a href="#" title="Home">Home</a></li>
+					<li><a href="#" title="About">About</a></li>
+					<li><a href="#" title="Coming Soon">Coming Soon</a></li>
+					<li id="last-menu-item"><a href="#" title="Contact">Contact</a></li>
+				</ul>
+			</nav>
+			<div class="clear"></div>
+			<div id="banner">
+			</div>
+		</header>
+		<section id="main">
+			<h1>Main Section</h1>
+			<p>Coming Soon</p>
+		</section>
+		<aside>
+			<h1>Sub-section</h1>
+			<p>Coming Soon</p>
+		</aside>
 	</div>
 </body>
 </html>
